--- a/public/css/main/session.css
+++ b/public/css/main/session.css
@@ -68,6 +68,17 @@
     direction:ltr;
 }
 
+.interest > ::-webkit-scrollbar {
+    display: inline-block;
+	width: 5px;
+  	height: 9px;
+  	background-color: #aaa;
+}
+
+.interest > ::-webkit-scrollbar-thumb {
+	background: #000;
+}
+
 .interest > .personList > .unit
 {
     display: inline-block;
@@ -77,18 +88,174 @@
 
     padding: 20px;
 
-    border: 0px;
     border-radius: 30px 0px;
-    background-color: #ffafd8;
+    background-color: #fdb7ba;
 }
 
-.interest > .personList > .unit > a
+.interest > .personList > .unit > p 
 {
-    width: 360px;
-    height: 260px;
-    font-size: 20px;
+    white-space: normal;
+    word-wrap: break-word;
+    word-break: keep-all;
+
+    color: #ffffff;
+    text-shadow: 0.01rem 0.01rem #000;
 }
 
-.qna {
-    height: 400px;
+.interest > .personList > .unit > .mainTitle
+{
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #ffffff;
+    text-shadow: 0.05rem 0.05rem #000;
+}
+
+.interest > .personList > .unit > .tags 
+{
+    width: 100%;
+    margin: 25px 0px;
+}
+
+.interest > .personList > .unit > .tags > span
+{
+    padding: 10px;
+    background-color: #beebfd;
+    border-radius: 1rem;
+    font-size: 0.8rem;
+    font-weight: 700;
+}
+
+.interest > .personList > .unit > button
+{
+    width: 100%;
+    height: 30px;
+    background-color: #f3cdad;
+    border-radius: 10px;
+}
+
+.interest > .personList > .unit > button:hover 
+{
+    background-color: #f3cdcd;
+}
+
+.reservation_popup 
+{
+    z-index: 999;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0, 0.5);
+}
+
+.reservation_popup > .inner 
+{
+    width: 30rem;
+    height: 40rem;
+    margin: 10rem auto;
+    background-color: #fff;
+    border-radius: 10px;
+}
+
+.reservation_popup > .inner > .title
+{
+    width: 100%;
+    height: 3rem;
+    background-color: #ff3366;
+}
+
+.reservation_popup > .inner > .title > p
+{
+    font-size: 1.5rem;
+    line-height: 3rem;
+    margin-left: 1rem;
+    font-weight: 700;
+    color: #fff;
+}
+
+.reservation_popup > .inner > .title > p,
+.reservation_popup > .inner > .title > a
+{
+    font-size: 1.5rem;
+    line-height: 3rem;
+    font-weight: 700;
+    color: #fff;
+}
+
+.reservation_popup > .inner > .title > p {
+    margin-left: 1rem;
+    float:left;
+}
+
+.reservation_popup > .inner > .title > a {
+    margin-right: 1rem;
+    float:right;
+}
+
+.reservation_popup > .inner > .content > p
+{
+    white-space: normal;
+    word-wrap: break-word;
+    word-break: keep-all;
+
+    font-size: 1rem;
+    margin: 1rem;
+    font-weight: 700;
+}
+
+.reservation_popup > .inner > .time {
+    margin-left: 1rem;
+}
+
+.reservation_popup > .inner > .time > .title
+{
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.reservation_popup > .inner > .time > select 
+{
+    width: 28rem;
+    margin-top: 0.5rem;
+    margin-bottom: 10rem;
+}
+
+.reservation_popup > .inner > .time > .timeout
+{
+    margin-top: 1rem;
+}
+
+.reservation_popup > .inner > .time > .timeout > span 
+{
+    font-size: 1.25rem;
+    font-weight: 700;
+}
+
+.reservation_popup > .inner > .time > .timeout > p
+{
+    font-size: 1rem;
+    font-weight: 700;
+}
+
+.reservation_popup > .inner > .button 
+{
+    margin-top: 3rem;
+    margin-left: 1rem;
+}
+
+.reservation_popup > .inner > .button > button
+{
+    width: 28rem;
+    height: 3.5rem;
+
+    font-size: 1.5rem;
+    font-weight: 700;
+    color: #000;
+
+    background-color: #f3cdad;
+    border-radius: 5px;
+}
+
+.reservation_popup > .inner > .button > button:hover 
+{
+    background-color: #f3cdcd;
 }
