회원가입 퍼블리싱 완료

--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -46,6 +46,17 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-::-webkit-scrollbar {
+
+/* 
+	추가한 css List
+*/
+::-webkit-scrollbar 
+{
 	display: none;
+}
+
+[type="radio"]
+{
+	vertical-align: center;
+	appearance: none;
 }
